completed horse care webpage

--- a/care-for-horses.html
+++ b/care-for-horses.html
@@ -123,10 +123,10 @@
             </ol>
             <p>
                 Finally: it is important to remember that
-                fresh clean water should be available to horses at all times. Insufficient water can contribute to poor health. Chronic dehydration can cause a horse to lose weight and be in poor condition. Dehydration can be deadly as lack of water can cause impactions leading to colics, especially during the winter months, when a horse's diet may consist almost solely of dry hay.  Additionally, unhygenic water and watering equipment such as troughs and buckets can also harbor bacteria or viruses that can make your horse sick.
+                fresh clean water should be available to horses at all times. Insufficient water can contribute to poor health. Chronic dehydration can cause a horse to lose weight and be in poor condition. Dehydration can be deadly as lack of water can cause infections leading to colics, especially during the winter months, when a horse's diet may consist almost solely of dry hay.  Additionally, unhygienic water and watering equipment such as troughs and buckets can also harbor bacteria or viruses that can make your horse sick.
             </p>
 
-            <h1>GROOMING YOUR HORSE/HOOF MAINTANANCE</h1>
+            <h1>GROOMING YOUR HORSE/HOOF MAINTENANCE</h1>
             <div class="grooming-img"></div>
             <p>
                 Proper grooming of your horse is extremely important for its health and well being. Much like human beings, improper grooming and care of a horse's body can lead to
@@ -137,8 +137,9 @@
             <br><br>
               <p><strong>How to Groom a Horse</strong></p>
             <p>
-                Here’s what to do to groom your horse and maintain its health! :
+                Here’s what to do to groom your horse and maintain its health:
             </p>
+
             <br><br>
             <ol>
                 <li>Start with the hooves: hold the hoof and with the hoof pick pry out any dirt, manure, or grit lodged in the frog or sole of the foot, picking from the heel to the toes.
@@ -155,7 +156,9 @@
                 Finally be sure remember to pay attention to your horse's behaviour while grooming. Some horses may be more delicate or fussy than others about having things like their ears or belly handled, so go slowly and be careful not to pinch or pull hairs.
                 If while brushing him, your horse reacts by laying back his ears or swishing his tail in agitation, he is telling you that the brushing is too vigorous and that you should be more
                 delicate.
-            </p>
+                  <p>For a more in depth and visual instructions on how to groom your horse, check out this video:</p>
+            <div class=""iframe-container></div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/-qmcVTqF46o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h3>TRAINING</h3>
             <div class="training-img"></div>
             <p>Lastly, regardless if you plan on using your horse to ride him or for draft, it is essential to ensure that your horse gets a regular amount
@@ -167,38 +170,35 @@
             <p> Regardless of your horse's breed or type of work it does, it is optimal to create an exercise plan for him to ensure a healthy and balanced exercise routine.
             Whilst the types of exercises can vary depending on your horse's age, breed and starting level of health, in general the exercise routine for your horse will take
                  are <a target="_blank" href="https://www.bhs.org.uk/advice-and-information/horse-care/horse-health-and-fitness"> this form</a>.
-                Before proceeding to starting a particular exercise/training routine, it is always recommended to talk to your horses's vet first, to ensure that the routine is appropriate
+                Before proceeding to starting a particular exercise/training routine, it is always recommended to talk to your horses' vet first, to ensure that the routine is appropriate
                 for your particular horse.</p>
-            <h3> ESENTIAL HORSE CARE</h3>
-            <div class="site-img"></div>
+            <h1> ESSENTIAL HORSE CARE</h1>
+            <div class="tack-img"></div>
+            <p> As well as the advice recommended above, there are a few last bits of advice that a good horse owner should know.
+            The first involves essential horse tack. The second involves involves some basic medicinal equipment that everyone should have in their
+            horses' first aid kit.</p>
+            <br><br>
+            <p><strong> Must have horse tack: </strong></p>
             <ol>
-                <li>Carrots need a location that receives full sunlight, though they can tolerate partial shade, too.</li>
-                <li>As discussed above, soil must be loose, sandy or loamy, and airy so that carrot roots can easily push down through the soil.</li>
+                <li>A halter:  it allows you to handle and restrain your horse before you put any tack on him and after you take it off.</li>
+                <li>A saddle (if your horse is not used for draught work)in the style you prefer, whether it be English, Western, or Saddleseat.</li>
+                <li> A saddle pad for your saddle</li>
+                <li> A bridle and bit.</li>
+                <li> A horse blanket to keep your horse warm during the colder months</li>
+                <li> A Harness if you plan to use your horse as a draught horse. you’ll need a fully fitted harness and other accessories.</li>
+                <li> The brushes, combs and hoof pick mentioned in the grooming section.</li>
             </ol>
-            <h1>HOW TO PLANT CARROTS</h1>
-            <ol>
-                <li>We recommend sowing seeds directly in the garden (or wherever you plan to grow them) rather than transplanting. Carrots do not like to have their roots disturbed. </li>
-                <li>Sow ¼ inch deep, 2 to 3 inches apart in rows 1 foot apart</li>
-                <p><strong>Tip: Try to distribute seed in an even fashion so that seeds don’t grow together. Use a seed-sower or thin vigorously to the right spacing.</strong></p>
                 <br><br>
-                <li>Keep the soil moist with frequent shallow waterings. For small carrot seeds to germinate, the soil mustn’t form a hard crust on top; cover with a layer of vermiculite or fine compost to prevent a crust from forming. (If you put your finger in the ground, it should be moist, but not wet, to the middle knuckle.)</li>
-                <li>Carrots are sometimes slow to germinate. They may take 2 to 3 weeks to show any sign of life, so don’t panic if your carrots don’t appear right away!</li>
-                <p><strong>Tip: To help keep track of where they were planted, mix carrot seeds with quick-germinating radish seeds or sow radish seeds in rows between carrot rows. The radishes will grow quickly and by the time the carrots really start to grow, the radishes can be harvested.</strong></p>
-                <br><br>
-                <p>Check out this video to learn how to plant carrots. </p>
-                <iframe width="738" height="405" src="https://www.youtube.com/embed/ttKbPzeadNw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </ol>
-            <h3> Popular horse breeds</h3>
-            <div class="breeds-img"></div>
+
+            <p><strong> Must have first aid equipment for your horse: </strong></p>
             <ol>
-                <li><strong>Little Finger:</strong>heirloom; a small Nantes type of carrot only 4 inches long and one inch thick; good for containers. </li>
-                <li><strong>Nantes:</strong>cylindrical (not tapered); 6 to 7 inches; exceptionally sweet; crisp texture.</li>
-                <li><strong>Bolero:</strong>slightly tapered; 7 to 8 inches; resists most leaf pests and blights.</li>
-                <li><strong>Thumberline:</strong>heirloom; round carrot, good for clumpy or clay soil and containers.</li>
-                <li><strong>Danvers:</strong>classic heirloom; 6 to 8 inches long, that tapers at the end and has a rich, dark orange color; suited to heavy soil.</li>
-                <li>For unusual color, try heirloom <strong>Red Cored Chantenay</strong> and bright <strong>Solar Yellow</strong>.</li>
+                <li>Fly control products, as fly repellent ointment.</li>
+                <li>Hoof treatments: rainy seasons make horses prone to thrush and dry spells where a hoof moisturizer is a necessity. Keep remedies for both dry and thrush feet on hand at all times. </li>
+                <li> Wound powder: Horses are prone to cuts, scrapes, and other minor injuries that don't need veterinary attention but that do need some help. In first aid preparations in powder form work best because they dry up any blood.</li>
+                <li>Animal first aid kit</li>
             </ol>
-        </div>
+            <br><br>
+            </div>
     </main>
 </body>
 <div class="footer">
