issue #25: added cabbage.html page

--- a/home.html
+++ b/home.html
@@ -86,7 +86,7 @@
                                         <a href="#">Lettuce</a>
                                     </li>
                                     <li>
-                                        <a href="#">Cabbage</a>
+                                        <a href="cabbage.html">Cabbage</a>
                                     </li>
                                     <li>
                                         <a href="#">Lemon</a>
