#26: Lemon.HTML page with Lemon.css
Signed-off-by: Nishit Prasad <prasad.nishit0@gmail.com>

--- a/home.html
+++ b/home.html
@@ -391,7 +391,7 @@
                                         <a href="cabbage.html">Cabbage</a>
                                     </li>
                                     <li>
-                                        <a href="#">Lemon</a>
+                                        <a href="lemon.html">Lemon</a>
                                     </li>
                                     <li>
                                         <a href="#">Pepper</a>
