made video responsive

--- a/beekeeping4begginers.html
+++ b/beekeeping4begginers.html
@@ -320,16 +320,9 @@
     </nav>
     <div id="beeContainerDiv">
         <h1 id='headerH1'>Beekeeping for Begginers</h1>
-        <iframe
-            id="BeekeepingIframe"
-            width="1195" 
-            height="672" 
-            src="https://www.youtube.com/embed/zDZDYgBkCx0" 
-            title="YouTube video player" 
-            frameborder="0" 
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-            allowfullscreen>
-        </iframe>
+        <div class= "iframe-container">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/zDZDYgBkCx0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
         <h1 id='headerH1'>BEEKEEPING IS LOCAL.</h1>
         <p>Bees are directly influenced by their environment, therefore, their behavior and</p>
         <p>success varies greatly across climates. For instance, the busy foraging season for</p>
