redesigned the sign up page and added some features to other html pages

--- a/food-crop.html
+++ b/food-crop.html
@@ -10,7 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Merienda&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-
+    <script src="/script/food-crop.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js" integrity="sha512-2fk3Q4NXPYAqIha0glLZ2nluueK43aNoxvijPf53+DgL7UW9mkN+uXc1aEmnZdkkZVvtJZltpRt+JqTWc3TS3Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>Document</title>
 </head>
 <body>
@@ -303,18 +304,17 @@
                         <li>
                             <a href="#">About</a>
                         </li>
-                        <li class="move-right btn">
-                            <a href="#">Chat Room</a>
-                        </li>
+                        
                     </ul>
                 </nav>
+                <div class="food-crop-intro">
+                    <div class="overlay">
+                    <h1 class="food-crop-header">Food Crop</h1>
+                    <p class="food-crop-text" id="text">A food crop can be anything that is grown specifically for human consumption, either directly or as an ingredient in other food stuffs.</p>
+                    </div>
+                </div>
         </div>
-        <div class="food-crop-intro">
-            <div class="overlay">
-            <h1 class="food-crop-header">Food Crop</h1>
-            <p class="food-crop-text">A food crop can be anything that is grown specifically for human consumption, either directly or as an ingredient in other food stuffs.</p>
-            </div>
-        </div>
+        
     </header>
     <main>
         <div class="food-crop-and-type-container">
@@ -545,8 +545,5 @@
             </div>
         </div>
     </main>
-<div class="footer">
-</div>
-
 </body>
 </html>
