--- a/home.html
+++ b/home.html
@@ -97,9 +97,7 @@
                                             <li>
                                                 <a href="#">Pepper</a>
                                             </li>
-                                            <li>
-                                                <a href="#">Eggplant</a>
-                                            </li>
+                                            
                                             <li>
                                                 <a href="#">Broccoli</a>
                                             </li>
@@ -108,9 +106,6 @@
                                             </li>
                                             <li>
                                                 <a href="#">Cauliflower</a>
-                                            </li>
-                                            <li>
-                                                <a href="#">Tomato</a>
                                             </li>
                                             <li>
                                                 <a href="#">Garlic</a>
@@ -261,10 +256,10 @@
                                 <a href="#">Livestock <i class="icon ion-md-arrow-dropdown"></i></a>
                                 <ul class="sub-menu">
                                     <li>
-                                        <a href="#">Cow</a>
+                                        <a href="./cow.html">Cow</a>
                                     </li>
                                     <li>
-                                        <a href="#">Goat</a>
+                                        <a href="./goat.html">Goat</a>
                                     </li>
                                     <li>
                                         <a href="#">Pig</a>
