--- a/sign-in.html
+++ b/sign-in.html
@@ -90,7 +90,7 @@
                 </button>
               </form>
               <div class="new-to-agrichub">
-                <p>New to AgricHub? <a href="#">Create an account</a></p>
+                <p>New to AgricHub? <a href="./index.html">Create an account</a></p>
               </div>
             </div>
           </div>
