--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
                 <input type="text" name="name" id="name" placeholder="Name"><br><br>
                 <input type="email" name="email" id="email" placeholder="Email"><br><br>
                 <input type="password" name="password" id="password" placeholder="Password"><br><br>
-                <div class="terms">I agree to the <span>Terms</span> and <span>Privacy Policy</span>.</div>
+                <input type="checkbox" id="checkbox" value="checkboxed" required="required">
+                <label for="checkbox">
+                    <div class="terms">I agree to the <span>Terms</span> and <span>Privacy Policy</span>.</div>
+                </label>
                 <div class="buttons">
                     <button class="sign-up" type="submit">Sign Up</button>
                     <button class="sign-in" type="submit">Sign In</button>
