changed the size of illustration

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             <div class="brand-name">
                 <h1>Agric<span>Hub.</span></h1>
             </div>
-            <div class="intro">
+            <div class="intro" id="intro">
                 <h1>Sign up and <br> become a member</h1>
                 <p>A central hub where farmers and gardeners find amazing topics, articles and exploration regarding crop and livestock farming.</p>
             </div>
-                <div class="buttons-mobile">
-                    <button class="sign-up-mobile" type="submit">Sign Up</button><br><br>
+                <div class="buttons-mobile" id="buttons-mobile">
+                    <button class="sign-up-mobile" type="submit" id="signup-Btn">Sign Up</button><br><br>
                     <button class="sign-in-mobile" type="submit">I have an account</button>
                 </div>
             <div class="illustration">
