issue #37 - added garlic.html page

--- a/home.html
+++ b/home.html
@@ -113,7 +113,7 @@
                                             <a href="#">Tomato</a>
                                         </li>
                                         <li>
-                                            <a href="#">Garlic</a>
+                                            <a href="garlic.html">Garlic</a>
                                         </li>
                                         <li>
                                             <a href="#">Swiss chard</a>
@@ -316,298 +316,6 @@
                 <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum eos sed quod voluptatibus
                     voluptate debitis!</p>
             </div>
-
-        <div class="container">
-            <nav>
-                <div class="menu-icons">
-                    <i class="icon ion-md-menu"></i>
-                    <i class="icon ion-md-close"></i>
-                </div>
-                <a href="#" class="logo">
-                   <span class="agricul">Agric</span><span class="hub">Hub</span>
-                </a>
-                <ul class="nav-list">
-                    <li>
-                        <a href="#">Home</a>
-                    </li>
-                    <li>
-                        <a href="#">Global-Marketplace</a>
-                    </li>
-                    <li>
-                        <a href="#">Crops <i class="icon ion-md-arrow-dropdown"></i></a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a href="./food-crop.html">Food Crops</a>
-                            </li>
-                            <li>
-                                <a href="#">Herbs <i class="icon ion-md-arrow-dropright"></i></a>
-                                <ul class="sub-menu">
-                                    <li>
-                                        <a href="./peppermint.html">Peppermint</a>
-                                    </li>
-                                    <li>
-                                        <a href="./rosemary.html">Rosemary</a>
-                                    </li>
-                                    <li>
-                                        <a href="./thyme.html">Thyme</a>
-                                    </li>
-                                    <li>
-                                        <a href="./lavender.html">Lavender</a>
-                                    </li>
-                                    <li>
-                                        <a href="./german-chamomile.html">German Chamomile</a>
-                                    </li>
-                                    <li>
-                                        <a href="./sage.html">Sage</a>
-                                    </li>
-                                    <li>
-                                        <a href="./parsley.html">Parsley</a>
-                                    </li>
-                                    <li>
-                                        <a href="./dill.html">Dill</a>
-                                    </li>
-                                    <li>
-                                        <a href="./basil.html">Basil</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Cilantro / Coriander</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Bay Leaves</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">Flowers <i class="icon ion-md-arrow-dropright"></i></a>
-                               
-                            </li>
-                            <li>
-                                <a href="#">Vegetables</a>
-                                <ul class="sub-menu">
-                                    <li>
-                                        <a href="#">Lettuce</a>
-                                    </li>
-                                    <li>
-                                        <a href="cabbage.html">Cabbage</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Lemon</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Pepper</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Eggplant</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Broccoli</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Spinach</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Cauliflower</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Tomato</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Garlic</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Swiss chard</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Kale and Cavolo</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Green peas</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Arthichokes</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Asian green</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Brussels sprouts</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Asparagus</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Beetroot</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Capcicum</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Carrot</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Celeriac</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Celery</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Fennel</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Chilli pepper</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Chokos</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Courgettes and Scallopini</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Cucumber</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Indian vegetables</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Microgreens</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Mushrooms</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Okra</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Onions</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Parsnips</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Rhubarb</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Puha/Rauriki</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Pumpkins</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Radishes</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Salad greens</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Shallots</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Swedes</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Sweet corn</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Silverbeet</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Spring onions</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Taro</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Turmeric</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Turnips</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Witloof</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Watercress</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Kohlrabi</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Kumara</a>
-                                    </li>
-                                    <li>
-                                        <a href="#">Leeks</a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <a href="#">Trees</a>
-                            </li>
-                            <li>
-                                <a href="#">Forage crops</a>
-                            </li>
-                            <li>
-                                <a href="#">Special crops</a>
-                            </li>
-                            <li>
-                                <a href="#">Viticulture</a>
-                            </li>
-                            <li>
-                                <a href="#">Cereals</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">Livestock <i class="icon ion-md-arrow-dropdown"></i></a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a href="#">Cow</a>
-                            </li>
-                            <li>
-                                <a href="#">Goat</a>
-                            </li>
-                            <li>
-                                <a href="#">Pig</a>
-                            </li>
-                            <li>
-                                <a href="#">Chicken</a>
-                            </li>
-                            <li>
-                                <a href="#">Fish</a>
-                            </li>
-                            <li>
-                                <a href="#">Sheep</a>
-                            </li>
-                            <li>
-                                <a href="#">Duck</a>
-                            </li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">Explore
-                            <i class="icon ion-md-arrow-dropdown"></i>
-                        </a>
-                        <ul class="sub-menu">
-                            <li>
-                                <a href="#">Agricultural principles</a>
-                            </li>
-                            <li>
-                                <a href="./beekeeping4begginers.html">Beekeeping for beginners</a>
-                            </li>
-                            <li>
-                                <a href="#">How to raise horses</a>
-                            </li>
-                           
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">About</a>
-                    </li>
-                    <li class="move-right btn">
-                        <a href="#">Chat Room</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
         <div class="intro">
            <p class="header">A place for Agriculturist</p>
            <h1 class="header2">BRINGING GROWTH TO
