issue #34 - added spinach.html page

--- a/home.html
+++ b/home.html
@@ -104,7 +104,7 @@
                                             <a href="#">Broccoli</a>
                                         </li>
                                         <li>
-                                            <a href="#">Spinach</a>
+                                            <a href="spinach.html">Spinach</a>
                                         </li>
                                         <li>
                                             <a href="#">Cauliflower</a>
