--- a/home.html
+++ b/home.html
@@ -105,7 +105,11 @@
                                             <a href="#">Broccoli</a>
                                         </li>
                                         <li>
+
+                                            <a href="spinach.html">Spinach</a>
+
                                             <a href="#">Spinach</a>
+
                                         </li>
                                         <li>
                                             <a href="#">Cauliflower</a>
