issue #45 - aligned html checkbox

--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/index.css">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@200&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
-<link rel="stylesheet/less" type="text/css" href="styles.less" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet/less" type="text/css" href="styles.less" />
 </head>
+
 <body>
 
     <header>
@@ -25,12 +29,13 @@
             </div>
             <div class="intro" id="intro">
                 <h1>Sign up and <br> become a member</h1>
-                <p>A central hub where farmers and gardeners find amazing topics, articles and exploration regarding crop and livestock farming.</p>
+                <p>A central hub where farmers and gardeners find amazing topics, articles and exploration regarding
+                    crop and livestock farming.</p>
             </div>
-                <div class="buttons-mobile" id="buttons-mobile">
-                    <button class="sign-up-mobile" type="submit" id="signup-Btn">Sign Up</button><br><br>
-                    <button class="sign-in-mobile" type="submit">I have an account</button>
-                </div>
+            <div class="buttons-mobile" id="buttons-mobile">
+                <button class="sign-up-mobile" type="submit" id="signup-Btn">Sign Up</button><br><br>
+                <button class="sign-in-mobile" type="submit">I have an account</button>
+            </div>
             <div class="illustration">
                 <img src="/images/undraw_two_factor_authentication_namy.svg" alt="svg-illustration">
             </div>
@@ -39,13 +44,13 @@
             <h1>Create Account</h1>
             <div class="social-media-clickable-icons">
                 <div class="google">
-                    <a href="#"><img src="https://img.icons8.com/material-sharp/30/000000/google-logo.png"/></a>
+                    <a href="#"><img src="https://img.icons8.com/material-sharp/30/000000/google-logo.png" /></a>
                 </div>
                 <div class="facebook">
-                    <a href="#"><img src="https://img.icons8.com/ios/40/000000/facebook-new.png"/></a>
+                    <a href="#"><img src="https://img.icons8.com/ios/40/000000/facebook-new.png" /></a>
                 </div>
                 <div class="twitter">
-                    <a href="#"><img src="https://img.icons8.com/ios-glyphs/35/000000/twitter--v1.png"/></a>
+                    <a href="#"><img src="https://img.icons8.com/ios-glyphs/35/000000/twitter--v1.png" /></a>
                 </div>
             </div>
             <div class="or-register">or use your email for registration:</div>
@@ -53,7 +58,10 @@
                 <input type="text" name="name" id="name" placeholder="Name"><br><br>
                 <input type="email" name="email" id="email" placeholder="Email"><br><br>
                 <input type="password" name="password" id="password" placeholder="Password"><br><br>
-                <div class="terms">I agree to the <span>Terms</span> and <span>Privacy Policy</span>.</div>
+                <div class="terms-container">
+                    <input type="checkbox" id="checkBox">
+                    <div class="terms">I agree to the <span>Terms</span> and <span>Privacy Policy</span>.</div>
+                </div>
                 <div class="buttons">
                     <button class="sign-up" type="submit">Sign Up</button>
                     <button class="sign-in" type="submit">Sign In</button>
@@ -61,12 +69,14 @@
             </form>
         </div>
     </header>
-        
 
-        
 
-  
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js" integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ==" crossorigin="anonymous"></script>
+
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"
+        integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ=="
+        crossorigin="anonymous"></script>
     <script src="./script/index.js"></script>
 
 
